--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "cross-env APP_ENVIRONMENT=production webpack -p --progress",
     "serve": "cross-env APP_ENVIRONMENT=development webpack-dev-server --progress --inline",
+    "ttab": "ttab -w",
+    "watch-server": "gulp",
     "webpack": "webpack --progress"
   },
   "dependencies": {
@@ -18,17 +20,26 @@
     "@angular/platform-browser-dynamic": "^2.2.1",
     "@angular/router": "^3.2.1",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
+    "fluency-injection": "^1.1.1",
+    "inversify": "^3.0.0-beta.1",
     "lodash": "^4.17.2",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-rc.4",
+    "typedi": "^0.4.2",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
+    "@types/express": "^4.0.34",
     "@types/lodash": "^4.14.39",
+    "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-typescript": "^3.1.3",
     "html-webpack-plugin": "^2.24.1",
     "pug-loader": "^2.3.0",
     "pug-ng-html-loader": "^1.0.10",
@@ -37,8 +48,10 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "ts-loader": "^1.2.2",
+    "ttab": "^0.5.0",
     "typescript": "^2.0.10",
     "webpack": "2.1.0-beta.27",
-    "webpack-dev-server": "2.1.0-beta.11"
+    "webpack-dev-server": "2.1.0-beta.11",
+    "webpack-shell-plugin": "^0.4.3"
   }
 }
