--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "cross-env APP_ENVIRONMENT=production webpack -p --progress",
-    "serve": "cross-env APP_ENVIRONMENT=development webpack-dev-server --progress --inline",
+    "serve": "cross-env APP_ENVIRONMENT=development webpack-dev-server --inline",
     "ttab": "ttab -w",
     "watch-server": "gulp",
     "webpack": "webpack --progress"
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "^2.2.1",
     "@angular/platform-browser-dynamic": "^2.2.1",
     "@angular/router": "^3.2.1",
+    "angular2-template-loader": "^0.6.0",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "fluency-injection": "^1.1.1",
     "inversify": "^3.0.0-beta.1",
     "lodash": "^4.17.2",
+    "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-rc.4",
@@ -34,6 +36,7 @@
     "@types/core-js": "^0.9.34",
     "@types/express": "^4.0.34",
     "@types/lodash": "^4.14.39",
+    "@types/morgan": "^1.7.32",
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
