--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "^2.2.1",
     "@angular/platform-browser-dynamic": "^2.2.1",
     "@angular/router": "^3.2.1",
+    "angular2-jwt": "^0.1.25",
     "angular2-template-loader": "^0.6.0",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
-    "fluency-injection": "^1.1.1",
-    "inversify": "^3.0.0-beta.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
@@ -40,6 +41,8 @@
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^3.1.3",
