--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pug-loader": "^2.3.0",
     "pug-ng-html-loader": "^1.0.10",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.6.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
