--- a/package.json
+++ b/package.json
@@ -19,24 +19,31 @@
     "@angular/platform-browser": "^2.2.1",
     "@angular/platform-browser-dynamic": "^2.2.1",
     "@angular/router": "^3.2.1",
+    "@types/body-parser": "^0.0.33",
     "angular2-jwt": "^0.1.25",
     "angular2-template-loader": "^0.6.0",
+    "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "helmet": "^3.2.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
+    "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-rc.4",
+    "stejar-di": "^1.1.3",
     "typedi": "^0.4.2",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/express": "^4.0.34",
+    "@types/helmet": "^0.0.33",
     "@types/lodash": "^4.14.39",
+    "@types/mongoose": "^4.7.0",
     "@types/morgan": "^1.7.32",
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
