--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "email-validator": "^1.0.7",
     "express": "^4.14.0",
     "helmet": "^3.2.0",
+    "http-status": "^0.2.3",
     "js-yaml": "^3.7.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
@@ -36,6 +37,7 @@
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-rc.4",
+    "standard-error": "^1.1.0",
     "stejar-di": "^1.1.3",
     "zone.js": "^0.6.26"
   },
@@ -44,7 +46,9 @@
     "@types/email-validator": "^1.0.30",
     "@types/express": "^4.0.34",
     "@types/helmet": "^0.0.33",
+    "@types/http-status": "^0.2.29",
     "@types/js-yaml": "^3.5.29",
+    "@types/jwt-simple": "^0.5.32",
     "@types/lodash": "^4.14.39",
     "@types/mongoose": "^4.7.0",
     "@types/morgan": "^1.7.32",
@@ -67,7 +71,7 @@
     "stylus-loader": "^2.3.1",
     "ts-loader": "^1.2.2",
     "ttab": "^0.5.0",
-    "typescript": "^2.0.10",
+    "typescript": "^2.1.4",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-server": "2.1.0-beta.11",
     "webpack-shell-plugin": "^0.4.3"
