adding registration capability

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -5,8 +5,16 @@
     "emitDecoratorMetadata": true,
     "baseUrl": "../..",
     "paths":{
-      "*": [
-        "src/*",
+      "client/*": [
+        "src/client/*",
+        "*"
+      ],
+      "shared/*": [
+        "src/shared/*",
+        "*"
+      ],
+      "server/*": [
+        "src/server/*",
         "*"
       ]
     }
