--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -12,6 +12,10 @@
       "dependencies/*": [
         "src/server/dependencies/*",
         "*"
+      ],
+      "shared/*": [
+        "src/shared/*",
+        "*"
       ]
     }
   },
