--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "cross-env APP_ENVIRONMENT=production webpack -p --progress",
     "serve": "cross-env APP_ENVIRONMENT=development webpack-dev-server --inline",
+    "test-server": "NODE_PATH=./ mocha test/server/*.js",
     "ttab": "ttab -w",
     "watch-server": "gulp",
     "webpack": "webpack --progress"
   },
   "dependencies": {
-    "@angular/common": "^2.2.1",
-    "@angular/compiler": "^2.2.1",
-    "@angular/core": "^2.2.1",
-    "@angular/http": "^2.2.1",
-    "@angular/platform-browser": "^2.2.1",
-    "@angular/platform-browser-dynamic": "^2.2.1",
-    "@angular/router": "^3.2.1",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
     "@types/body-parser": "^0.0.33",
     "angular2-jwt": "^0.1.25",
     "angular2-template-loader": "^0.6.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
     "core-js": "^2.4.1",
     "email-validator": "^1.0.7",
@@ -31,17 +34,18 @@
     "js-yaml": "^3.7.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.2",
-    "mongoose": "^4.7.1",
+    "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "pluralize": "^3.1.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-rc.4",
+    "rxjs": "^5.0.3",
     "standard-error": "^1.1.0",
-    "stejar-di": "^1.1.3",
-    "zone.js": "^0.6.26"
+    "wagner-core": "^0.2.0",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
     "@types/core-js": "^0.9.34",
     "@types/email-validator": "^1.0.30",
     "@types/express": "^4.0.34",
@@ -50,7 +54,7 @@
     "@types/js-yaml": "^3.5.29",
     "@types/jwt-simple": "^0.5.32",
     "@types/lodash": "^4.14.39",
-    "@types/mongoose": "^4.7.0",
+    "@types/mongoose": "^4.7.3",
     "@types/morgan": "^1.7.32",
     "@types/pluralize": "^0.0.27",
     "chalk": "^1.1.3",
@@ -62,6 +66,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^3.1.3",
     "html-webpack-plugin": "^2.24.1",
+    "mocha": "^3.2.0",
     "pug-loader": "^2.3.0",
     "pug-ng-html-loader": "^1.0.10",
     "raw-loader": "^0.5.1",
