--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "core-js": "^2.4.1",
     "email-validator": "^1.0.7",
     "express": "^4.14.0",
+    "facebook-oauth-agent": "^1.0.3",
     "helmet": "^3.2.0",
     "http-status": "^0.2.3",
     "js-yaml": "^3.7.0",
     "jwt-simple": "^0.5.1",
+    "linkedin-oauth-agent": "^1.0.3",
     "lodash": "^4.17.2",
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
