--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "cross-env APP_ENVIRONMENT=production webpack -p --progress",
     "serve": "cross-env APP_ENVIRONMENT=development webpack-dev-server --inline",
-    "test-server": "NODE_PATH=./ mocha test/server/*.js",
+    "test-api": "NODE_PATH=./ mocha --compilers js:babel-core/register test/api/*.js",
     "ttab": "ttab -w",
     "watch-server": "gulp",
     "webpack": "webpack --progress"
@@ -59,6 +59,9 @@
     "@types/mongoose": "^4.7.3",
     "@types/morgan": "^1.7.32",
     "@types/pluralize": "^0.0.27",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
+    "babel-preset-es2017": "^6.22.0",
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
@@ -76,6 +79,7 @@
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
+    "superagent": "^3.5.0",
     "ts-loader": "^1.2.2",
     "ttab": "^0.5.0",
     "typescript": "^2.1.4",
