more features to charge payment

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -4,6 +4,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
+    "lib": ["es2015"],
     "module": "commonjs",
     "sourceMap": true,
     "removeComments": true,
