--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "slug": "^0.9.1",
     "speakingurl": "^13.0.0",
     "standard-error": "^1.1.0",
+    "stripe": "^4.19.0",
     "tinymce": "^4.5.6",
     "wagner-core": "^0.2.0",
     "zone.js": "^0.7.6"
@@ -54,6 +55,7 @@
     "@types/bcrypt": "^1.0.0",
     "@types/core-js": "^0.9.34",
     "@types/email-validator": "^1.0.30",
+    "@types/es6-promise": "^0.0.32",
     "@types/express": "^4.0.34",
     "@types/helmet": "^0.0.33",
     "@types/http-status": "^0.2.29",
@@ -62,7 +64,9 @@
     "@types/lodash": "^4.14.39",
     "@types/mongoose": "^4.7.3",
     "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.18",
     "@types/pluralize": "^0.0.27",
+    "@types/stripe": "^2.0.2",
     "babel-core": "^6.23.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.23.0",
     "babel-preset-es2017": "^6.22.0",
