--- a/package.json
+++ b/package.json
@@ -55,16 +55,15 @@
     "@types/bcrypt": "^1.0.0",
     "@types/core-js": "^0.9.34",
     "@types/email-validator": "^1.0.30",
-    "@types/es6-promise": "^0.0.32",
     "@types/express": "^4.0.34",
     "@types/helmet": "^0.0.33",
     "@types/http-status": "^0.2.29",
     "@types/js-yaml": "^3.5.29",
     "@types/jwt-simple": "^0.5.32",
     "@types/lodash": "^4.14.39",
-    "@types/mongoose": "^4.7.3",
+    "@types/mongodb": "^2.2.2",
+    "@types/mongoose": "^4.7.12",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.18",
     "@types/pluralize": "^0.0.27",
     "@types/stripe": "^2.0.2",
     "babel-core": "^6.23.1",
@@ -73,6 +72,7 @@
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.0",
+    "es6-promise": "^4.1.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
