--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "lib": ["es6", "dom"],
     "baseUrl": "../..",
     "paths":{
       "client/*": [
