add start staging command

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "tsc --rootDir src --outDir dist && cross-env NODE_ENV=production APP_ENVIRONMENT=production webpack -p --progress",
     "serve": "cross-env NODE_ENV=development APP_ENVIRONMENT=development webpack-dev-server --inline",
+    "build-server": "gulp transpile-server",
+    "start-staging": "env NODE_ENV=development CONFIG=staging.config.yml node dist/server/index.js",
     "test-api": "NODE_PATH=./ mocha --compilers js:babel-core/register test/api/*.js",
     "ttab": "ttab -w",
     "watch-server": "gulp",
