--- a/staging.config.yml
+++ b/staging.config.yml
@@ -21,3 +21,7 @@ mongodb:
     roles:
       - dbAdmin
       - readWrite
+
+stripe:
+  secret: sk_test_P84JOD8KzBkCfpTOxoq83dKo
+  apiVersion: !!str 2016-03-07
