--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "tsc --rootDir src --outDir dist",
     "build-prod": "tsc --rootDir src --outDir dist && cross-env NODE_ENV=production APP_ENVIRONMENT=production webpack -p --progress",
-    "serve": "cross-env NODE_ENV=development APP_ENVIRONMENT=development webpack-dev-server --inline",
     "build-server": "gulp transpile-server",
-    "start-staging": "env NODE_ENV=development CONFIG=staging.config.yml node dist/server/index.js",
+    "build-staging": "gulp transpile-server && cross-env NODE_ENV=staging APP_ENVIRONMENT=staging webpack",
+    "serve": "cross-env NODE_ENV=development APP_ENVIRONMENT=development webpack-dev-server --inline",
+    "start-staging": "sudo env NODE_ENV=staging CONFIG=staging.config.yml pm2 start dist/server/index.js --name api",
     "test-api": "NODE_PATH=./ mocha --compilers js:babel-core/register test/api/*.js",
     "ttab": "ttab -w",
     "watch-server": "gulp",
