--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "2.1.4",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
+    "brace": "^0.10.0",
     "core-js": "^2.4.1",
     "email-validator": "^1.0.7",
     "express": "^4.14.0",
@@ -42,6 +43,7 @@
     "lodash": "^4.17.2",
     "mongoose": "^4.9.5",
     "morgan": "^1.7.0",
+    "ng2-ace": "^0.0.15",
     "pluralize": "^3.1.0",
     "pm2": "^2.4.6",
     "pug": "^2.0.0-beta6",
