--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular2-jwt": "^0.1.25",
     "angular2-template-loader": "^0.6.0",
     "async": "2.1.4",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "1.0.2",
     "body-parser": "^1.15.2",
     "brace": "^0.10.0",
     "core-js": "^2.4.1",
